[metadata]
name = bluetti_mqtt
version = 0.17.0
url = http://github.com/vmauery/bluetti_mqtt
author = Florian Trück
author_email = vernon.mauery@gmail.com
description = MQTT interface to Bluetti power stations
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find:
zip_safe = false
install_requires =
    aiomqtt
    bleak
    crcmod

[options.entry_points]
console_scripts =
    bluetti-discovery = bluetti_mqtt.discovery_cli:main
    bluetti-logger = bluetti_mqtt.logger_cli:main
    bluetti-mqtt = bluetti_mqtt.server_cli:main
